--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "static-site",
+  "name": "develop",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "dependencies": {
+    "jest": "^27.0.4",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "inquirer": "^6.3.1",
-    "jest": "^27.0.3",
-    "path": "^0.12.7"
-  }
+  "license": "ISC"
 }
